// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries creates a clinic 1`] = `
Object {
  "data": Object {
    "createClinic": Object {
      "doctorClinicUid": "e488511f-3c42-4de1-b834-6e4a867a14e8",
      "name": "Clinic number 4",
      "roomNumber": "4",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries deletes a clinic 1`] = `
Object {
  "data": Object {
    "deleteClinic": Object {
      "doctorClinicUid": "0afdaddf-536e-4b67-8617-52783e64f6b5",
      "name": "Clinic number 5",
      "roomNumber": "9",
      "uid": "027ae0ac-05d6-43bf-818e-a76607b7f976",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches created clinic 1`] = `
Object {
  "data": Object {
    "getClinic": Array [
      Object {
        "doctorClinicUid": "0afdaddf-536e-4b67-8617-52783e64f6b5",
        "name": "Webyte Test Clinic",
        "roomNumber": "21",
        "uid": "027ae0ac-05d6-43bf-818e-a76607b7f976",
      },
      Object {
        "doctorClinicUid": "e488511f-3c42-4de1-b834-6e4a867a14e8",
        "name": "Clinic number 4",
        "roomNumber": "4",
        "uid": "031fad12-48a5-41c3-9a5e-babf75923c49",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries fetches existing clinic 1`] = `
Object {
  "data": Object {
    "getClinic": Array [
      Object {
        "doctorClinicUid": "0afdaddf-536e-4b67-8617-52783e64f6b5",
        "name": "Webyte Test Clinic",
        "roomNumber": "21",
        "uid": "027ae0ac-05d6-43bf-818e-a76607b7f976",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Queries updates a clinic 1`] = `
Object {
  "data": Object {
    "updateClinic": Object {
      "name": "Clinic number 5",
      "roomNumber": "9",
      "uid": "027ae0ac-05d6-43bf-818e-a76607b7f976",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
